plugins {
    id 'java'
    id 'application'
}

group = 'br.com.vrsoftware'
version = '1.0.0'

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }

    exclude 'META-INF/*.RSA'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'

    manifest {
        attributes(
                'Main-Class': 'br.com.vrsoftware.vrpdvprofingerprintintegration.Main'
        )
    }
}

application {
    mainClass = 'br.com.vrsoftware.vrpdvprofingerprintintegration.Main'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.machinezoo.sourceafis:sourceafis:2.2.0'

    implementation files('libs/CIDBio.jar')
    implementation files('libs/NBioBSPJNI.jar')

    implementation("net.java.dev.jna:jna:5.6.0")

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}